# cplusplus-fullstack-boilerplate

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  README.md  app-dev.env  docker-compose.yml  entrypoint.sh  makefile
data/: crude_oil_wti_futures.csv  meta_stock.csv  spy_etf.csv
include/: Config.hpp  CustomFormatter.hpp  IDatabase.hpp  PostgresDatabase.hpp  ResponseHelper.hpp  SQLiteDatabase.hpp  StandardResponse.hpp  StockPrice.hpp  auth_helpers.hpp  csv_loader.hpp  handle_request.hpp  handler_db.hpp  handler_hello.hpp  handler_loadcsv.hpp  handler_login.hpp  listener.hpp  mime_types.hpp  path_cat.hpp  request_utils.hpp  session.hpp  utility.hpp
src/: PostgresDatabase.cpp  SQLiteDatabase.cpp  listener.cpp  main.cpp  mime_types.cpp  path_cat.cpp  session.cpp  utility.cpp
www/: package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo
www/src/: App.css  App.tsx  index.css  main.tsx
www/src/components/: CardLayout.tsx  Header.tsx
www/src/stores/: rootStore.ts  themeStore.ts  useStore.ts
